// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders a flag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  background-color: #FFFFFF;
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<span
    class="emotion-1"
    data-testid="flag"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Flag renders a flag with no paddings 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 0;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  background-color: #FFFFFF;
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<span
    class="emotion-1"
    data-testid="flag"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Flag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  background-color: #0A68C1;
  color: #FFFFFF;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<span
    class="emotion-1"
    data-testid="flag"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Flag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  background-color: #0A68C1;
  color: #FFFFFF;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
    data-testid="flag"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Flag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  background-color: #0A68C1;
  color: #FFFFFF;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
    data-testid="flag"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;
